src/objects/myobj__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>myobj</label>
    <nameField>
        <label>myobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>